fix: Make code more PEP8-compatible.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,11 @@
 [semantic_release]
 version_variable = annoying/__init__.py:__version__
+
+[yapf]
+based_on_style = pep8
+column_limit = 80
+align_closing_bracket_with_visual_indent = false
+dedent_closing_brackets = true
+
+[flake8]
+ignore=F403,E128,E126,E123,E121,E265,E501,N802,N803,N806,C901
