--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,31 @@
 language: python
 python:
   - "2.7"
+  - "3.2"
   - "3.3"
   - "3.4"
+  - "3.5"
   - "pypy"
-script: python setup.py test
+env:
+  - DJANGO=1.6
+  - DJANGO=1.7
+  - DJANGO=1.8
+  - DJANGO=1.9
+
+# Django 1.6 does not support Python 3.4+
+# Django 1.9+ removes Python 3.3 compatability.
+matrix:
+  exclude:
+    - python: "3.2"
+      env: DJANGO=1.9
+    - python: "3.3"
+      env: DJANGO=1.9
+    - python: "3.4"
+      env: DJANGO=1.6
+    - python: "3.5"
+      env: DJANGO=1.6
+    - python: "3.5"
+      env: DJANGO=1.7
+install:
+  - pip install -q Django==$DJANGO
+script: python test.py
