--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,16 @@ env:
   - DJANGO=1.7
   - DJANGO=1.8
   - DJANGO=1.9
+  - DJANGO=1.10
 
 # Django 1.6 does not support Python 3.4+
 # Django 1.9+ removes Python 3.3 compatability.
 matrix:
   exclude:
+    - python: "3.2"
+      env: DJANGO=1.10
+    - python: "3.3"
+      env: DJANGO=1.10
     - python: "3.2"
       env: DJANGO=1.9
     - python: "3.3"
