Move test directory outside of library
* More traditional Python project layout
* Can avoid defining models.py in library
* Can now easily avoid distributing tests as part of package
* Can simplify test runner to a single command
* Tests auto-discovered, don't need to explicitly import them in __init__.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,5 @@ matrix:
       env: DJANGO=1.9
 install:
   - pip install -q Django==$DJANGO
-script: python test.py
+  - pip install -e .
+script: ./runtests.sh
