--- a/.travis.yml
+++ b/.travis.yml
@@ -7,22 +7,22 @@ python:
   - "3.5"
   - "pypy"
 env:
-  - DJANGO=1.8
-  - DJANGO=1.9
-  - DJANGO=1.10
+  - DJANGO=1.8.0
+  - DJANGO=1.9.0
+  - DJANGO=1.10.0
 
 # Django 1.9+ removes Python 3.3 compatability.
 matrix:
   exclude:
     - python: "3.2"
-      env: DJANGO=1.10
+      env: DJANGO=1.10.0
     - python: "3.3"
-      env: DJANGO=1.10
+      env: DJANGO=1.10.0
     - python: "3.2"
-      env: DJANGO=1.9
+      env: DJANGO=1.9.0
     - python: "3.3"
-      env: DJANGO=1.9
+      env: DJANGO=1.9.0
 install:
-  - pip install -q Django==$DJANGO
+  - pip install Django~=$DJANGO
   - pip install -e .
 script: ./runtests.sh
