--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,46 @@
+sudo: false
 language: python
 cache: pip
-
-python:
-  - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
-  - "3.5"
-  - "pypy"
-env:
-  - DJANGO=1.8.0
-  - DJANGO=1.9.0
-  - DJANGO=1.10.0
-
-# Django 1.9+ removes Python 3.3 compatability.
 matrix:
-  exclude:
-    - python: "3.2"
-      env: DJANGO=1.10.0
-    - python: "3.3"
-      env: DJANGO=1.10.0
-    - python: "3.2"
+  include:
+    - python: 2.7
+      env: DJANGO=1.8.0
+    - python: 3.2
+      env: DJANGO=1.8.0
+    - python: 3.3
+      env: DJANGO=1.8.0
+    - python: 3.4
+      env: DJANGO=1.8.0
+    - python: 3.5
+      env: DJANGO=1.8.0
+    - python: pypy
+      env: DJANGO=1.8.0
+    - python: 2.7
       env: DJANGO=1.9.0
-    - python: "3.3"
+    - python: 3.4
       env: DJANGO=1.9.0
+    - python: 3.5
+      env: DJANGO=1.9.0
+    - python: pypy
+      env: DJANGO=1.9.0
+    - python: 2.7
+      env: DJANGO=1.10.0
+    - python: 3.4
+      env: DJANGO=1.10.0
+    - python: 3.5
+      env: DJANGO=1.10.0
+    - python: pypy
+      env: DJANGO=1.10.0
+    - python: 2.7
+      env: DJANGO=1.11.0
+    - python: 3.4
+      env: DJANGO=1.11.0
+    - python: 3.5
+      env: DJANGO=1.11.0
+    - python: 3.6
+      env: DJANGO=1.11.0
+    - python: pypy
+      env: DJANGO=1.11.0
 install:
   - pip install Django~=$DJANGO
   - pip install -e .
