--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ align_closing_bracket_with_visual_indent = false
 dedent_closing_brackets = true
 
 [flake8]
-ignore=F403,E128,E126,E123,E121,E265,E501,N802,N803,N806,C901
+ignore = E501
 
 [wheel]
 universal = 1
