Introduce isort to automatically sort import order
Removes the need for contributors to give any thought to how to organize
import statements. Can simply let the tools handle it instead.

Use same configuration as used by the Django project.

Add isort check to Travis configuration.

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,12 @@ universal = 1
 
 [metadata]
 license_file = LICENSE.txt
+
+[isort]
+combine_as_imports = true
+default_section = THIRDPARTY
+include_trailing_comma = true
+known_first_party = annoying
+line_length = 79
+multi_line_output = 5
+not_skip = __init__.py
