--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,12 @@ matrix:
       env: DJANGO=1.11.0
     - python: pypy
       env: DJANGO=1.11.0
+    - python: 3.4
+      env: DJANGO=2.0
+    - python: 3.5
+      env: DJANGO=2.0
+    - python: 3.6
+      env: DJANGO=2.0
 install:
   - pip install Django~=$DJANGO
   - pip install -r requirements.txt
