--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,12 @@ matrix:
       env: DJANGO=2.2
     - python: 3.7
       env: DJANGO=2.2
+    - python: 3.6
+      env: DJANGO=3.0
+    - python: 3.7
+      env: DJANGO=3.0
+    - python: 3.8
+      env: DJANGO=3.0
 install:
   - pip install Django~=$DJANGO
   - pip install -r requirements.txt
